--- a/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/core/_type.scss
@@ -149,8 +149,8 @@ mark,
 		content: '';
 		display: block;
 		position: absolute;
-		height: 1em;
-		bottom: 0;
+		height: .6em;
+		bottom: .2em;
 		left: -.2em;
 		width: calc(100% + .4em);
 		background-color: $primary;
