--- a/wp-content/plugins/crown-blocks/src/block-event-header/style.scss
+++ b/wp-content/plugins/crown-blocks/src/block-event-header/style.scss
@@ -46,24 +46,29 @@
 		}
 	}
 
+	.index-header {
+		margin-bottom: 2rem;
+		@media (min-width: 992px) {
+			margin-right: 2rem;
+			margin-bottom: 5rem;
+		}
+		@media (min-width: 1200px) {
+			margin-right: 3rem;
+		}
+	}
+
 	.index-title {
 		font-weight: 800;
 		text-transform: uppercase;
 		line-height: 1.1;
 		font-size: 3rem;
-		margin-bottom: 2rem;
+		margin-bottom: 0;
 		padding-bottom: .5rem;
 		border-bottom: 0.8975rem solid #fff;
 		align-self: flex-start;
 		flex: 0 1 auto;
 		@media (min-width: 768px) {
 			font-size: 3.75rem;
-		}
-		@media (min-width: 992px) {
-			margin-right: 2rem;
-		}
-		@media (min-width: 1200px) {
-			margin-right: 3rem;
 		}
 		span {
 			@media (min-width: 992px) {
