Adding prev/next event links

--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -27541,28 +27541,34 @@ body.mobile-menu-active {
   margin-top: 3rem; }
 
 body.single-post #main-article .entry-footer .continue-reading,
-body.single-client_story #main-article .entry-footer .continue-reading {
+body.single-client_story #main-article .entry-footer .continue-reading,
+body.single-event #main-article .entry-footer .continue-reading {
   margin-top: 4rem; }
   @media (min-width: 768px) {
     body.single-post #main-article .entry-footer .continue-reading,
-    body.single-client_story #main-article .entry-footer .continue-reading {
+    body.single-client_story #main-article .entry-footer .continue-reading,
+    body.single-event #main-article .entry-footer .continue-reading {
       margin-top: 6rem; } }
   body.single-post #main-article .entry-footer .continue-reading h4,
-  body.single-client_story #main-article .entry-footer .continue-reading h4 {
+  body.single-client_story #main-article .entry-footer .continue-reading h4,
+  body.single-event #main-article .entry-footer .continue-reading h4 {
     font-size: 1.5rem; }
 
 body.single-post #main-article .entry-footer .links,
-body.single-client_story #main-article .entry-footer .links {
+body.single-client_story #main-article .entry-footer .links,
+body.single-event #main-article .entry-footer .links {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin: 0 -1rem; }
   @media (min-width: 768px) {
     body.single-post #main-article .entry-footer .links,
-    body.single-client_story #main-article .entry-footer .links {
+    body.single-client_story #main-article .entry-footer .links,
+    body.single-event #main-article .entry-footer .links {
       margin: 0 -2rem; } }
   body.single-post #main-article .entry-footer .links a,
-  body.single-client_story #main-article .entry-footer .links a {
+  body.single-client_story #main-article .entry-footer .links a,
+  body.single-event #main-article .entry-footer .links a {
     padding: 1rem;
     -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
@@ -27582,35 +27588,42 @@ body.single-client_story #main-article .entry-footer .links {
             align-items: flex-start; }
     @media (min-width: 768px) {
       body.single-post #main-article .entry-footer .links a,
-      body.single-client_story #main-article .entry-footer .links a {
+      body.single-client_story #main-article .entry-footer .links a,
+      body.single-event #main-article .entry-footer .links a {
         padding: 2rem; } }
     body.single-post #main-article .entry-footer .links a[rel=prev]:hover:after,
-    body.single-client_story #main-article .entry-footer .links a[rel=prev]:hover:after {
+    body.single-client_story #main-article .entry-footer .links a[rel=prev]:hover:after,
+    body.single-event #main-article .entry-footer .links a[rel=prev]:hover:after {
       -webkit-transform: rotate(180deg);
           -ms-transform: rotate(180deg);
               transform: rotate(180deg); }
     body.single-post #main-article .entry-footer .links a[rel=prev]:after,
-    body.single-client_story #main-article .entry-footer .links a[rel=prev]:after {
+    body.single-client_story #main-article .entry-footer .links a[rel=prev]:after,
+    body.single-event #main-article .entry-footer .links a[rel=prev]:after {
       -webkit-transform: rotate(180deg);
           -ms-transform: rotate(180deg);
               transform: rotate(180deg); }
       @media (min-width: 576px) {
         body.single-post #main-article .entry-footer .links a[rel=prev]:after,
-        body.single-client_story #main-article .entry-footer .links a[rel=prev]:after {
+        body.single-client_story #main-article .entry-footer .links a[rel=prev]:after,
+        body.single-event #main-article .entry-footer .links a[rel=prev]:after {
           -webkit-transform: rotate(180deg) translateX(-1rem);
               -ms-transform: rotate(180deg) translateX(-1rem);
                   transform: rotate(180deg) translateX(-1rem); } }
     body.single-post #main-article .entry-footer .links a:hover,
-    body.single-client_story #main-article .entry-footer .links a:hover {
+    body.single-client_story #main-article .entry-footer .links a:hover,
+    body.single-event #main-article .entry-footer .links a:hover {
       background-color: #CFD2D8; }
       body.single-post #main-article .entry-footer .links a:hover:after,
-      body.single-client_story #main-article .entry-footer .links a:hover:after {
+      body.single-client_story #main-article .entry-footer .links a:hover:after,
+      body.single-event #main-article .entry-footer .links a:hover:after {
         -webkit-transform: none;
             -ms-transform: none;
                 transform: none;
         opacity: 1; }
     body.single-post #main-article .entry-footer .links a + a,
-    body.single-client_story #main-article .entry-footer .links a + a {
+    body.single-client_story #main-article .entry-footer .links a + a,
+    body.single-event #main-article .entry-footer .links a + a {
       -webkit-box-flex: 0;
           -ms-flex: 0 0 auto;
               flex: 0 0 auto;
@@ -27621,7 +27634,8 @@ body.single-client_story #main-article .entry-footer .links {
           -ms-flex-align: end;
               align-items: flex-end; }
     body.single-post #main-article .entry-footer .links a:after,
-    body.single-client_story #main-article .entry-footer .links a:after {
+    body.single-client_story #main-article .entry-footer .links a:after,
+    body.single-event #main-article .entry-footer .links a:after {
       -webkit-font-smoothing: antialiased;
       -moz-osx-font-smoothing: grayscale;
       display: inline-block;
@@ -27642,7 +27656,8 @@ body.single-client_story #main-article .entry-footer .links {
       width: 2rem; }
       @media (min-width: 576px) {
         body.single-post #main-article .entry-footer .links a:after,
-        body.single-client_story #main-article .entry-footer .links a:after {
+        body.single-client_story #main-article .entry-footer .links a:after,
+        body.single-event #main-article .entry-footer .links a:after {
           font-size: 2.5rem;
           width: 2.5rem;
           opacity: 0;
@@ -27650,14 +27665,16 @@ body.single-client_story #main-article .entry-footer .links {
               -ms-transform: translateX(-1rem);
                   transform: translateX(-1rem); } }
     body.single-post #main-article .entry-footer .links a .label,
-    body.single-client_story #main-article .entry-footer .links a .label {
+    body.single-client_story #main-article .entry-footer .links a .label,
+    body.single-event #main-article .entry-footer .links a .label {
       display: block;
       text-transform: uppercase;
       font-weight: 700;
       color: #696D7D;
       font-size: 1rem; }
     body.single-post #main-article .entry-footer .links a .title,
-    body.single-client_story #main-article .entry-footer .links a .title {
+    body.single-client_story #main-article .entry-footer .links a .title,
+    body.single-event #main-article .entry-footer .links a .title {
       display: none;
       font-size: 1.75rem;
       line-height: 1.2;
@@ -27666,7 +27683,8 @@ body.single-client_story #main-article .entry-footer .links {
       margin-bottom: 1rem; }
       @media (min-width: 576px) {
         body.single-post #main-article .entry-footer .links a .title,
-        body.single-client_story #main-article .entry-footer .links a .title {
+        body.single-client_story #main-article .entry-footer .links a .title,
+        body.single-event #main-article .entry-footer .links a .title {
           display: block; } }
 
 body.single-team_member #main .container > .inner {
