--- a/wp-content/themes/norcal-sbdc/assets/src/scss/templates/_singular.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/templates/_singular.scss
@@ -1,6 +1,7 @@
 
 body.single-post,
-body.single-client_story {
+body.single-client_story,
+body.single-event {
 	#main-article {
 		.entry-footer {
 			.continue-reading {
