--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_main.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_main.scss
@@ -92,7 +92,8 @@
 				}
 			}
 			body.single-post &,
-			body.single-resource & {
+			body.single-resource &,
+			body.single-event & {
 				margin-bottom: 0;
 				padding-bottom: 0;
 			}
