--- a/wp-content/themes/norcal-sbdc/assets/css/style.css
+++ b/wp-content/themes/norcal-sbdc/assets/css/style.css
@@ -23127,7 +23127,8 @@ nav.pagination {
         display: none; }
   .wp-block-crown-blocks-post-index article.type-post .entry-teaser {
     width: 100%;
-    padding-bottom: 2.5rem;
+    padding: 1rem;
+    padding-bottom: 4rem;
     position: relative; }
     @media (min-width: 768px) {
       .wp-block-crown-blocks-post-index article.type-post .entry-teaser {
@@ -23146,8 +23147,8 @@ nav.pagination {
       font-family: icomoon;
       content: "";
       position: absolute;
-      left: 0;
-      bottom: 0;
+      left: 1rem;
+      bottom: 1rem;
       line-height: 1;
       font-size: 2rem; }
       @media (min-width: 768px) {
