--- a/wp-content/themes/norcal-sbdc/assets/src/scss/site/_header.scss
+++ b/wp-content/themes/norcal-sbdc/assets/src/scss/site/_header.scss
@@ -828,8 +828,9 @@
 					display: block;
 				}
 				.entry-title {
-					font-weight: 500;
+					font-weight: 400;
 					margin-bottom: 0.5rem;
+					font-size: 1.5rem;
 				}
 			}
 		}
